add_executable(point3d point3d.cc)
add_executable(point3d_f function.cc)
add_executable(virtualfunction virtualfunction.cc)
add_executable(size size.cc)
add_executable(datamember datamember.cc)
#add_executable(constdemo constdemo.cc)
add_executable(funcpointer funcpointer.cc)
add_executable(tempobject tempobject.cc)